Correctly align footer buttons

--- a/admin-dev/themes/new-theme/scss/pages/product/product_page.scss
+++ b/admin-dev/themes/new-theme/scss/pages/product/product_page.scss
@@ -231,13 +231,17 @@
     }
 
     .product-footer-container {
-      display: flex;
-      flex-direction: row;
-      justify-content: flex-start;
       width: 100%;
+      height: 100%;
+      text-align: right;
 
       > * {
+        float: none;
         margin: 0 0.5rem;
+
+        &.align-left {
+          float: left;
+        }
       }
     }
   }
